# llm-red

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: findings.yaml
data/attacks/: direct_injection.yaml  indirect_injection.yaml  jailbreak.yaml  multilingual.yaml  obfuscation.yaml  prompt_extraction.yaml
data/calibration/: bypass_calibration.yaml  gandalf.yaml
docs/: walkthrough.md
evidence/: F10-homoglyph-coverage-gap-2026-06-16.md  F11-judge-calibration-2026-06-17.md  F3-german-refuse-then-comply-run3.md  framing-decomposition-smoke-2026-06-16.md  german-ml001-funrun-2026-06-15.md  s3-reproduced-findings.md
evidence/S5a-target-swap/: FINDINGS.md  graded.json  transcripts.json
evidence/S5b-llama-guard/: FINDINGS.md
evidence/S5c-scanners/: COMPARISON.md  garak-dan-light-run.md  garak-malware-run.md  p0_dan.report.html  p0_dan.report.jsonl  p0_dan_sample.report.jsonl
evidence/S5d-rag/: FINDINGS.md  ii-001_trials.json
llm_red/: dataset.py  findings.py  runner.py  severity.py
llm_red/detectors/: __init__.py  (+3 more)
reports/: findings.json  report-findings.html  report-full-live-2026-06-29.html
tests/: conftest.py  fake_target.py  test_calibration.py  test_dataset.py  test_detectors.py  test_findings_showcase.py  test_judge_calibration.py  test_llama_guard.py  test_llama_guard_live.py  test_llm_judge.py  test_ollama_provider_mocked.py  test_provider_retry.py  test_runner_live.py  test_runner_mocked.py  test_severity.py  test_smoke_live.py  test_target_provider_live.py  test_target_provider_mocked.py  test_target_swap_live.py
(+24 files in other folders)
